src/objects/netsuite_conn__Order_Sync_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>netsuite_conn__Account_Field_Ids__c</fullName>
        <label>Account Field Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Line_Item_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Line Item Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Use_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Order Sync Settings</label>
</CustomObject>